--- a/src/css/shiki.css
+++ b/src/css/shiki.css
@@ -3,16 +3,26 @@
  * [rehype-pretty-code](https://rehype-pretty.pages.dev/) is the plugin used for code formatting.
  */
 
+[data-line] {
+  @apply relative px-2 min-w-full flex-1;
+}
 /* Highlight lines/words */
 [data-highlighted-line] {
-  @apply inline-block -mx-4 border-l-4 border-secondary bg-green-500/5 pl-3 w-[calc(100%+1rem*2)];
+  @apply bg-green-500/5;
+}
+
+/* Highlighted Indicator */
+[data-highlighted-line]::after {
+  @apply absolute top-0 left-0 w-1 h-full bg-secondary;
+  content: "";
 }
 
 code[data-line-numbers] {
   counter-reset: line;
 }
 
-code[data-line-numbers] > [data-line]::before {
+/* Line Number Count */
+[data-line]::before {
   counter-increment: line;
   content: counter(line);
   @apply inline-block mr-8 text-right w-3 text-green-600;
@@ -31,5 +41,18 @@ code[data-line-numbers-max-digits="4"] > [data-line]::before {
 }
 
 [data-rehype-pretty-code-title] {
-  @apply bg-green-800 relative z-10 p-2 px-4 rounded-tl-md rounded-tr-md text-white font-mono font-bold;
+  @apply bg-green-800 relative p-2 px-4 rounded-tl-md rounded-tr-md text-white text-sm font-mono font-bold;
+}
+
+[data-rehype-pretty-code-figure] pre {
+  @apply flex overflow-x-auto py-4 border-2 border-green-800 rounded-b-lg;
+}
+
+/* Code block without a title */
+[data-rehype-pretty-code-figure]:not(:has(figcaption)) > pre {
+  @apply rounded-lg;
+}
+
+[data-rehype-pretty-code-figure] code {
+  @apply flex flex-col flex-1;
 }
